--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,12 +14,16 @@
   <br>
   <div>
     <p>
-      Codigo: <input type="number">
+      Codigo: <input type="number" [(ngModel)] = "codigo">
     </p>
     <p>
-      Descripcion: <input type ="text";
+      Descripcion: <input type ="text" [(ngModel)]="descripcion">
     </p>
     <p>
-      Precio: <input type ="number":
+      Precio: <input type ="number" [(ngModel)]="precio">
+    </p>
+    <p>
+      <button>Agregar</button>
+      <button>Modificar</button>
     </p>
   </div>
